src/test/resources/negative/VoidBinding.java
import net.nokok.draft.DraftModule;

@DraftModule
interface VoidBinding {
    void bind();
}